--- a/resturauntPageRedirect.html
+++ b/resturauntPageRedirect.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=Course_Project/index.html">
+    <meta http-equiv="refresh" content="0; url=/Front-End-Projects/Course_Project/">
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="Course_Project/index.html">link to the page</a>.</p>
+<p>If you are not redirected, <a href="/Front-End-Projects/Course_Project/">click here</a>.</p>
 </body>
 </html>
